2011-04-13 Maxim
- UI.Vision: Checkboxes for the default values set are added to the properties dialog of the ElFigure.
- FIX:UI.Vision: Selecting elements by the rectangle is fixed for the primitive ElFigure.
- FIX:UI.Vision: Focus loosing when properties dialog is called is fixed for the the primitive ElFigure.


2011-04-12 Roman
- !!:DOC: Generic document "openscada.pdf" for English is created. Some English documents is fixed.


2011-04-12 Maxim
- !UI.Vision: Support of sevelar figures is added to the properties dialog of the ElFigure.


2011-04-11 Roman
- FIX:DAQ.DCON: DI command 8DI (@AA,FF00) processing is fixed.
- !!:DOC: New documents is added for libraries: Lib.TechApp, WLib.Main and WLib.MnEls. Generic document "openscada.pdf" for Russian is created.
    Some Russian documents is fixed.


2011-04-11 Maxim
- !UI.Vision: Elementary figure's properties dialog is added.


2011-04-08 Roman
- !!:DOC: Main system documents is updated: APIOpenSCADA.pdf, AboutOpenSCADA.pdf, DAQ.pdf, QuickStart.pdf.
- !!:DOC: New main system documents is added: build.pdf, properties.pdf, report.pdf, terms.pdf.


2011-04-07 Roman
- !!:UI.QTCfg: Documents and translations is updated and released version 2.0.0.
- !!:UI.QTStarter: Documents and translations is updated and released version 1.6.1.
- !!:UI.VCAEngine: Documents and translations is updated and released version 1.1.0.
- !!:UI.Vision: Documents and translations is updated and released version 1.1.0.
- !!:UI.WebCfg: Documents and translations is updated and released version 1.5.5.
- !!:UI.WebCfgD: Documents and translations is updated and released version 0.6.6.
- !!:UI.WebUser: Documents and translations is updated and released version 0.6.1.
- !!:UI.WebVision: Documents and translations is updated and released version 0.9.1.


2011-04-06 Roman
- FIX:DAQ.JavaLikeCalc: Index check is added for access to string's symbol by index. Used for out of range prevent.